Work-around to register events

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,9 @@
-irc = "ircString"
+irc = "undefinedIrcString"
+irc = ${?TWITCHCLIENTIRC}
 
 twitchClient {
-    id = "myId"
-    secret = "mySecret"
+    id = "undefinedId"
+    id = ${?TWITCHCLIENTID}
+    secret = "undefinedSecret"
+    secret = ${?TWITCHCLIENTSECRET}
 }
