Work done around configuration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,10 @@
-irc = "ircString"
-
 twitchClient {
+    irc = "ircString"
+    irc = ${?TWITCHCLIENTIRC}
     id = "myId"
+    id = ${?TWITCHCLIENTID}
     secret = "mySecret"
+    secret = ${?TWITCHCLIENTSECRET}
+    channel = "funkyfunctor"
+    channel = ${?TWITCHCLIENTDEFAULTCHANNEL}
 }
