--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,5 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run tests
-      run: sbt test
+    - name: Docker local deploy
+      run: sbt docker:publishLocal
