--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Docker local deploy
-      run: sbt docker:publishLocal
+      run: sbt test docker:publishLocal
